Forget to change texts

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--I'm sorry for not being not good in Front End 🥲-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-        <title>Flip Card</title>
+        <title>Ömer R. Sak</title>
         <style>
             :root {
                 --sBlack: #181A18;
@@ -88,14 +89,14 @@
             <div class="card-inner w-full h-full transform">
                 <!-- Front of the card -->
                 <div class="card-face flex flex-col items-start rounded-md shadow-lg justify-normal p-32">
-                    <p class="text-xl font-bold">John Doe</p>
-                    <p class="text-sm">Front Side Info</p>
+                    <p class="text-xl font-bold">Ömer Rasim Sak</p>
+                    <p class="text-sm">Here will be my Beautiful Web Site</p>
                 </div>
 
                 <!-- Back of the card -->
                 <div class="card-back flex flex-col items-start rounded-md shadow-lg justify-normal p-32">
-                    <p class="text-xl font-bold">Back Side Info</p>
-                    <p class="text-sm">Additional Details</p>
+                    <p class="text-xl font-bold">I'm working on it</p>
+                    <p class="text-sm">Back and is Better for Me .d</p>
                 </div>
             </div>
         </div>
