--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <!-- Back of the card -->
                 <div class="card-back flex flex-col items-start rounded-md shadow-lg justify-normal p-32">
                     <p class="text-xl font-bold">I'm working on it</p>
-                    <p class="text-sm">Back and is Better for Me .d</p>
+                    <p class="text-sm">Backend is Better for Me .d</p>
                 </div>
             </div>
         </div>
