Open Graph Meta Tags(for Discord :D)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <title>Ömer R. Sak</title>
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Kafalar Karışık">
+    <meta property="og:description" content="A Junior who like Backend and Gray Hat.">
+    <meta property="og:image" content="https://kafalar-karisik.github.io/logo.png">
+    <meta property="og:url" content="https://kafalar-karisik.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="de_DE" />
+    <meta property="og:locale:alternate" content="tr_TR" />
+    <meta property="og:site_name" content="MyPortfolio" />
+
     <style>
       :root {
         --sBlack: #181a18;
