modified:   index.html

--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
     <title>Ömer R. Sak</title>
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Kafalar Karışık">
-    <meta property="og:description" content="A Junior who like Backend and Gray Hat.">
-    <meta property="og:image" content="https://kafalar-karisik.github.io/logo.png">
-    <meta property="og:url" content="https://kafalar-karisik.github.io/">
-    <meta property="og:type" content="website">
+    <meta property="og:title" content="Kafalar Karışık" />
+    <meta
+      property="og:description"
+      content="A Junior who likes Backend and Gray Hat."
+    />
+    <meta
+      property="og:image"
+      content="https://kafalar-karisik.github.io/logo.png"
+    />
+    <meta property="og:url" content="https://kafalar-karisik.github.io/" />
+    <meta property="og:type" content="website" />
     <meta property="og:locale" content="de_DE" />
     <meta property="og:locale:alternate" content="tr_TR" />
     <meta property="og:site_name" content="MyPortfolio" />
@@ -121,9 +127,9 @@
             the basics of <strong>programming</strong> when I was in primary
             school and began working on <strong>Arduino</strong>
             <i class="fa-solid fa-microchip"></i> projects when I was in
-            secondary school. Later, I in <strong>Python</strong> and have been
-            working to get better at it. Now I have a strong interest in
-            <strong>Backend Developing</strong> and
+            secondary school. Later, I delved into <strong>Python</strong> and
+            have been working to get better at it. Now I have a strong interest
+            in <strong>Backend Developing</strong> and
             <strong>Penetration Testing</strong>. Currently, I'm learning many
             new things like VUE.js
             <span class="skill-icon"><i class="fab fa-vuejs"></i></span>, Django
