modified:   index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div
           class="card-face flex flex-col items-start rounded-md shadow-lg justify-normal p-32"
         >
-          <p class="text-xl font-bold">Ömer Rasim Sak</p>
+          <p class="text-xl font-bold">Ömer Rasim</p>
           <p class="text-sm">
             I was born in <strong>Turkey</strong> 🇹🇷, and I currently live in
             <strong>Germany</strong> 🇩🇪. Ever since I was young, I've been
