--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="flex items-center mt-2">
             <i class="brand-icon fab fa-github text-gray-600"></i>
             <a
-              href="https://github.com/Kafalar-Karisk"
+              href="https://github.com/Kafalar-Karisik"
               class="text-gray-600"
               target="_blank"
               >Kafalar-Karisik</a
