--- a/static/index.html
+++ b/static/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
+    <!--I need to say, I am not a Frontend Developer. And it is freaking hard to design a website for me. 
+    If you say it is bad you are probably right. :D-->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Ömer R. Sak</title>
     <link rel="canonical" href="https://kafalar-karisik.github.io/">
     <meta property="og:url" content="https://kafalar-karisik.github.io/">
     <meta name="description" content="I think it is my Portfolio...">
     <meta property="og:title" content="Ömer R. Sak">
-    <meta name="twitter:description" content="I think it is my Portfolio...">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Ömer R. Sak">
     <meta property="og:image" content="https://kafalar-karisik.github.io/assets/img/Astronaut_Play_Dj___Illustration-removebg-preview.png">
     <meta property="og:description" content="I think it is my Portfolio...">
     <script type="application/ld+json">
@@ -24,10 +24,6 @@
     </script>
     <link rel="icon" type="image/png" sizes="499x499" href="assets/img/Astronaut_Play_Dj___Illustration-removebg-preview.png">
     <link rel="icon" type="image/png" sizes="499x499" href="assets/img/Astronaut_Play_Dj___Illustration-removebg-preview.png" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="499x499" href="assets/img/Astronaut_Play_Dj___Illustration-removebg-preview.png">
-    <link rel="icon" type="image/png" sizes="499x499" href="assets/img/Astronaut_Play_Dj___Illustration-removebg-preview.png" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="499x499" href="assets/img/Astronaut_Play_Dj___Illustration-removebg-preview.png">
-    <link rel="icon" type="image/png" sizes="499x499" href="assets/img/Astronaut_Play_Dj___Illustration-removebg-preview.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
@@ -35,7 +31,7 @@
 </head>
 
 <body>
-    <div class="d-block d-print-block d-sm-block d-md-flex d-lg-flex d-xl-flex d-xxl-flex" style="padding-top: 66px;padding-bottom: 66px;padding-left: 58px;padding-right: 58px;display: flex;">
+    <div style="padding-top: 66px;padding-bottom: 66px;padding-left: 58px;padding-right: 58px;display: flex;">
         <header style="width: 50%;display: block;position: sticky;top: 0;padding-right: 39px;padding-top: 30px;padding-bottom: 30px;padding-left: 20px;height: 80vh;">
             <h1>Ömer Rasim Sak</h1>
             <h2>"Junior" Backend Developer, Infotronics,&nbsp;</h2>
@@ -57,8 +53,8 @@
                         <path d="M352 256c0 22.2-1.2 43.6-3.3 64H163.3c-2.2-20.4-3.3-41.8-3.3-64s1.2-43.6 3.3-64H348.7c2.2 20.4 3.3 41.8 3.3 64zm28.8-64H503.9c5.3 20.5 8.1 41.9 8.1 64s-2.8 43.5-8.1 64H380.8c2.1-20.6 3.2-42 3.2-64s-1.1-43.4-3.2-64zm112.6-32H376.7c-10-63.9-29.8-117.4-55.3-151.6c78.3 20.7 142 77.5 171.9 151.6zm-149.1 0H167.7c6.1-36.4 15.5-68.6 27-94.7c10.5-23.6 22.2-40.7 33.5-51.5C239.4 3.2 248.7 0 256 0s16.6 3.2 27.8 13.8c11.3 10.8 23 27.9 33.5 51.5c11.6 26 20.9 58.2 27 94.7zm-209 0H18.6C48.6 85.9 112.2 29.1 190.6 8.4C165.1 42.6 145.3 96.1 135.3 160zM8.1 192H131.2c-2.1 20.6-3.2 42-3.2 64s1.1 43.4 3.2 64H8.1C2.8 299.5 0 278.1 0 256s2.8-43.5 8.1-64zM194.7 446.6c-11.6-26-20.9-58.2-27-94.6H344.3c-6.1 36.4-15.5 68.6-27 94.6c-10.5 23.6-22.2 40.7-33.5 51.5C272.6 508.8 263.3 512 256 512s-16.6-3.2-27.8-13.8c-11.3-10.8-23-27.9-33.5-51.5zM135.3 352c10 63.9 29.8 117.4 55.3 151.6C112.2 482.9 48.6 426.1 18.6 352H135.3zm358.1 0c-30 74.1-93.6 130.9-171.9 151.6c25.5-34.2 45.2-87.7 55.3-151.6H493.4z"></path>
                     </svg></a></div>
         </header>
-        <main style="width: 50%;padding-right: 0px;position: relative;" data-bs-spy="scroll" data-bs-target="#navs" data-bs-smooth-scroll="true">
-            <p style="padding-bottom: 150px;">I was born in Turkey 🇹🇷, and I m currently live in Germany 🇩🇪. Ever since I was young, I've been really interested in computers. I started learning the basics of programming when I was in primary school and began working on Arduino projects when I was in secondary school. Later, I in Python and have been working to get better at it. Now I have a strong interest in Backend Developing and Electronic. Currently I'm learning many new things like Django and sometimes enjoy designing and printing simple 3D models as a hobby.<br><br>My ultimate goal is to continuously advance my knowledge. There is always something to Learn.</p>
+        <main style="width: 50%;" data-bs-spy="scroll" data-bs-target="#navs" data-bs-smooth-scroll="true">
+            <p style="padding-bottom: 150px;">I was born in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="🇹🇷"><span style="text-decoration: underline;">Turkey</span></span>, and I currently live in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="🇩🇪">Germany</span>. Ever since I was young, I've been really interested in computers. I started learning the basics of programming when I was in primary school and began working on Arduino projects when I was in secondary school. Later, I in Python and have been working to get better at it. Now I have a strong interest in Backend Developing and Penetration Testing. Currently I'm learning many new things like Django for Now and sometimes enjoy designing and printing simple 3D models as a hobby.<br><br>My ultimate goal is to continuously advance my knowledge. There is always something to Learn.</p>
             <ul class="list-group" id="education" style="border-style: none;padding-bottom: 50px;">
                 <li class="list-group-item" style="border-style: none;">
                     <h1>Education</h1>
@@ -138,5 +134,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 </body>
+
+<!--
+Roses are Red,
+Violets are Blue
+
+Unexpected '{' on line 32.
+-->
 
 </html>
