--- a/static/index.html
+++ b/static/index.html
@@ -34,9 +34,9 @@
     <div style="padding-top: 66px;padding-bottom: 66px;padding-left: 58px;padding-right: 58px;display: flex;">
         <header style="width: 50%;display: block;position: sticky;top: 0;padding-right: 39px;padding-top: 30px;padding-bottom: 30px;padding-left: 20px;height: 80vh;">
             <h1>Ömer Rasim Sak</h1>
-            <h2>"Junior" Backend Developer, Infotronics,&nbsp;</h2>
+            <h2>"Junior" Backend Developer, Infotronics, ...</h2>
             <h3>Near EDDS, Germany</h3>
-            <p>A student with so many interest in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="near EDDS">Germany</span>.</p>
+            <p>A student with so many interest.</p>
             <ul class="nav nav-tabs flex-column" id="navs" style="border-style: none;width: inherit;">
                 <li class="nav-item" style="border-style: none;display: flex;width: inherit;"><a class="nav-link active" href="#education" style="border-style: none;">Education</a></li>
                 <li class="nav-item" style="border-style: none;display: flex;width: inherit;"><a class="nav-link" href="#experience" style="border-style: none;">Experience</a></li>
@@ -54,7 +54,7 @@
                     </svg></a></div>
         </header>
         <main style="width: 50%;" data-bs-spy="scroll" data-bs-target="#navs" data-bs-smooth-scroll="true">
-            <p style="padding-bottom: 150px;">I was born in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="🇹🇷"><span style="text-decoration: underline;">Turkey</span></span>, and I currently live in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="🇩🇪">Germany</span>. Ever since I was young, I've been really interested in computers. I started learning the basics of programming when I was in primary school and began working on Arduino projects when I was in secondary school. Later, I in Python and have been working to get better at it. Now I have a strong interest in Backend Developing and Penetration Testing. Currently I'm learning many new things like Django for Now and sometimes enjoy designing and printing simple 3D models as a hobby.<br><br>My ultimate goal is to continuously advance my knowledge. There is always something to Learn.</p>
+            <p style="padding-bottom: 150px;">I was born in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="🇹🇷">Turkey</span>&nbsp;and I live in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="🇩🇪">Germany</span>. Ever since I was young, I've been really interested in computers. I started learning the basics of programming when I was in primary school and began working on Arduino projects when I was in secondary school. Later, I learned Python and have been working to get better at it. Now I have a strong interest in Backend Developing and Penetration Testing. Currently I'm learning many new things like Django for Now and sometimes enjoy designing and printing simple 3D models as a hobby.<br><br>My ultimate goal is to continuously advance my knowledge. There is always something to Learn.</p>
             <ul class="list-group" id="education" style="border-style: none;padding-bottom: 50px;">
                 <li class="list-group-item" style="border-style: none;">
                     <h1>Education</h1>
@@ -82,21 +82,21 @@
                     <header style="width: 33%;min-width: 33%;"><span>April - 2023</span></header>
                     <div>
                         <h3>Internship as Backend Developer</h3>
-                        <p>It was my first step into Backend Developing. I constrained fully of Django and learned a lot of things.&nbsp;&nbsp;</p><span class="badge rounded-pill bg-primary" style="margin-left: 2px;margin-right: 2px;">Backend</span><span class="badge rounded-pill bg-primary" style="margin-left: 2px;margin-right: 2px;">Python</span><span class="badge rounded-pill bg-primary" style="margin-left: 2px;margin-right: 2px;">Django</span>
+                        <p>My first step into Backend Developing. I constrained fully of Django and learned a lot of things.&nbsp;&nbsp;</p><span class="badge rounded-pill bg-primary" style="margin-left: 2px;margin-right: 2px;">Backend</span><span class="badge rounded-pill bg-primary" style="margin-left: 2px;margin-right: 2px;">Python</span><span class="badge rounded-pill bg-primary" style="margin-left: 2px;margin-right: 2px;">Django</span>
                     </div>
                 </li>
                 <li class="list-group-item" style="display: flex;border-style: none;">
                     <header style="width: 33%;min-width: 33%;"><span>March - 2024</span></header>
                     <div>
                         <h3>Internship as Advanced Development Electronics <br>(TN-ME)</h3>
-                        <p>it was a very good experience for<br> me. I knew already the basic of Electronic but there I learned detailed PCB design and more...</p><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">Mecatronic</span><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">Electronics</span><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">Platindesign</span><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">KiCad</span><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">Information technology</span><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">Controller Programming</span>
+                        <p>It was a very good experience for<br> me. I knew already the basic of Electronic but there I learned detailed PCB design and more...</p><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">Mecatronic</span><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">Electronics</span><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">Platindesign</span><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">KiCad</span><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">Information technology</span><span class="badge rounded-pill bg-primary" style="margin-right: 2px;margin-left: 2px;">Controller Programming</span>
                     </div>
                 </li>
                 <li class="list-group-item" style="display: flex;border-style: none;">
                     <header style="width: 33%;min-width: 33%;"><span>June - 2021</span></header>
                     <div>
                         <h3><span data-bs-toggle="tooltip" data-bss-tooltip="" title="FLL guides youth throught STEM learning and exploration at an early age."><strong><span style="text-decoration: underline;">First Lego League</span></strong></span>&nbsp;(Turkey)</h3>
-                        <p>My Team and me won the 1 Place in Robot Design category.<br>In COVID-19 time it was very funny and we had a lot of time for meet with each other. We was the one of the rare teams who can meet (Within health rules).</p><span class="badge rounded-pill bg-primary">Lego Build</span><span class="badge rounded-pill bg-primary">STEM</span>
+                        <p>My Team and me won the 1. Place Robot Design in country.<br>In COVID-19 time it was very funny and we had a lot of time for meet with each other. We was the one of the rare teams who can meet (Within health rules).</p><span class="badge rounded-pill bg-primary">Lego Build</span><span class="badge rounded-pill bg-primary">STEM</span>
                     </div>
                 </li>
             </ul>
@@ -114,8 +114,8 @@
                 <li class="list-group-item" style="display: flex;border-style: none;">
                     <header style="width: 33%;min-width: 33%;"><span>2023- Present</span></header>
                     <div>
-                        <h3 title="">Volunteering in<span data-bs-toggle="tooltip" data-bss-tooltip="" title="IWillFillit..."><br><strong><span style="text-decoration: underline;">Mehrgenerationenhaus</span></strong><br><br></span></h3>
-                        <p>...</p>
+                        <h3 title="">Volunteering in&nbsp;<a href="https://www.mehrgenerationenhaeuser.de/leichte-sprache" target="_blank" style="text-decoration:none;"><br><strong><span style="text-decoration: underline; color: rgb(33, 37, 41);">Mehrgenerationenhaus</span></strong></a></h3>
+                        <p>A "Mehrgenerationenhaus," or multigenerational house, is a community space in Germany where people of all ages come together. It offers activities, support, and services for children, families, and seniors, promoting interaction, mutual help, and learning across generations. It’s a place where people can socialize, participate in workshops, and find help with everyday challenges.</p>
                     </div>
                 </li>
                 <li class="list-group-item" style="display: flex;border-style: none;">
