--- a/static/index.html
+++ b/static/index.html
@@ -204,11 +204,7 @@
                 <li class="list-group-item" style="border-style:none;">
                     <h1>Projects</h1>
                     <div>
-                        <p>I am a kid who can say "I'm programming very oft" but I can prove or show it. My projects
-                            are mostly local on my computer because they are not a real Projects. Some are just for
-                            test or learn something new and if it is something that more then just few code files
-                            that I upload to GitHub than I don't like to make it Public.&nbsp;<br>But there is some
-                            of them what I published that you can take a look.</p>
+                        <p>I am a kid who can say "I'm programming very often" but I can't prove or show it. My projects are mostly local on my computer because they are not a real Projects. Some are just for test or learn something new and if it is something that more then just few code files that I upload to GitHub than I don't like to make it Public.&nbsp;<br>But there is some of them what I published that you can take a look.</p>
                     </div>
                 </li>
                 <li class="list-group-item" style="border-style: none;">
